# TMC2209Pico

./: CHANGELOG.md  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: uart_problem_report.md
demo/: demo_script_04_stallguard.py
demo/tmc2240/: demo_script_03_basic_movement.py  demo_script_11_continous_movement.py  demo_script_12_hybrid_continous_movement.py
src/tmc_driver/: _tmc_exceptions.py  _tmc_gpio_board.py  _tmc_stallguard.py  _tmc_stepperdriver.py  tmc_2209.py  tmc_220x.py  tmc_2240.py
src/tmc_driver/com/: _tmc_com.py  _tmc_com_spi.py  _tmc_com_uart.py
src/tmc_driver/motion_control/: _tmc_mc_step_dir.py  _tmc_mc_step_pwm_dir.py  _tmc_mc_vactual.py
src/tmc_driver/reg/: _tmc2209_reg.py  _tmc220x_reg.py  _tmc224x_reg.py  _tmc_reg.py
tests/: test_tmc_com_spi.py  test_tmc_com_uart.py
