[metadata]
name = PyTmcStepper
version = 0.7.2
author = Christian Köhlke
author_email = christian@koehlke.de
description = This is a Python libary to drive a stepper motor with a Trinamic stepper driver and a single board computer like a Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chr157i4n/PyTmcStepper
project_urls =
    Bug Tracker = https://github.com/Chr157i4n/PyTmcStepper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: System :: Hardware :: Hardware Drivers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pyserial

[options.packages.find]
where = src

[options.extras_require]
RASPBERRY_PI =
    RPi.GPIO
RASPBERRY_PI5 =
    gpiozero
NVIDIA_JETSON =
    Jetson.GPIO
LUCKFOX_PICO =
    python-periphery
ORANGE_PI =
    OPi.GPIO